--- a/packages/client/src/components/errorMessage/errorMessage.scss
+++ b/packages/client/src/components/errorMessage/errorMessage.scss
@@ -6,12 +6,12 @@
   margin: 0 auto;
 
   &__img {
-    width: 10rem;
+    width: 140px;
   }
 
   &__text {
-    margin-top: 0.8rem;
+    margin-top: 12px;
     font-weight: 500;
-    font-size: 1.2rem;
+    font-size: 16px;
   }
 }
