--- a/packages/client/src/pages/Forum/forum.scss
+++ b/packages/client/src/pages/Forum/forum.scss
@@ -1,1 +1,17 @@
 
+a {
+  display: inline-block;
+
+  color: inherit;
+  text-decoration: none;
+}
+
+.forum-category {
+  background-color: hsl(195, 73%, 58%);
+
+  color: hsl(0, 0%, 100%);
+  font-weight: 600;
+  font-size: 13px;
+  text-shadow: 0 1px 1px hsl(195, 73%, 40%);
+}
+
