--- a/packages/client/src/pages/Game/game.scss
+++ b/packages/client/src/pages/Game/game.scss
@@ -1,1 +1,6 @@
-canvas { background: #eee; display: block; margin: 0 auto; margin-top: 100px;}
+canvas { 
+    background: #eee; 
+    display: block; 
+    margin: 0 auto; 
+    margin-top: 100px;
+}
