--- a/packages/client/src/pages/StartGameScreen/StartGameScreen.scss
+++ b/packages/client/src/pages/StartGameScreen/StartGameScreen.scss
@@ -16,11 +16,27 @@
   }
 
   &__title {
-    max-width: 400px;
+    max-width: 500px;
     color: var(--color-black);
+    font-size: 18x;
+    line-height: 24px;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  &__game {
+    color: blue;
+    font-size: 22px;
+    line-height: 26px;
+    text-align: center;
+    margin-bottom: 80px;
+  }
+
+  &__link {
+    color: black;
     font-size: 16px;
     line-height: 22px;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
   }
 }
