--- a/packages/client/src/pages/Forum/forum.scss
+++ b/packages/client/src/pages/Forum/forum.scss
@@ -1,8 +1,10 @@
-a {
+button {
   display: inline-block;
 
   color: inherit;
   text-decoration: none;
+  border: none;
+  background: none;
 }
 
 .forum-category {
