--- a/packages/client/src/pages/StartGameScreen/StartGameScreen.scss
+++ b/packages/client/src/pages/StartGameScreen/StartGameScreen.scss
@@ -11,31 +11,32 @@
     justify-content: center;
     width: 50vw;
     height: 50vh;
-    border: 1px solid black;
     border-radius: 10px;
   }
 
   &__title {
     max-width: 500px;
     color: var(--color-black);
-    font-size: 18x;
+    font-size: 24x;
     line-height: 24px;
     text-align: center;
     margin-bottom: 30px;
   }
 
   &__link {
-    color: black;
+    color: var(--color-black);
     font-size: 16px;
     line-height: 22px;
     text-align: center;
     margin-bottom: 15px;
 
     &_game {
-      color: blue;
-      font-size: 22px;
-      line-height: 26px;
+      color: var(--primary);
+      font-size: 30px;
+      font-weight: bold;
+      line-height: 36px;
       margin-bottom: 80px;
+      text-decoration: none;
     }
   }
 }
