Исправление ошибок и доработка стилей

--- a/packages/client/src/components/toggleTheme/toggleTheme.scss
+++ b/packages/client/src/components/toggleTheme/toggleTheme.scss
@@ -1,10 +1,27 @@
 .theme {
-  .img {
-    margin-left: 5px;
-    width: 20px;
+  .btn {
+    color: var(--color-black);
+    background-color: transparent;
+    border: none;
+
+    .img {
+      margin-left: 5px;
+      width: 20px;
+    }
   }
 
-  :hover {
+  .btn:hover {
+    color: var(--secondary);
+    background-color: transparent;
+  }
+}
+
+.dark .theme {
+  .btn {
+    color: var(--color-white);
+  }
+
+  .btn:hover {
     color: var(--secondary);
   }
 }
