--- a/packages/client/src/pages/EndGameScreen/EndGameScreen.scss
+++ b/packages/client/src/pages/EndGameScreen/EndGameScreen.scss
@@ -2,10 +2,46 @@ $font-family: 'Caveat', cursive;
 
 .endGameTitle {
   font-family: $font-family;
-  font-size: 200px;
+  font-size: 90px;
 }
 
 .endGameScore {
   font-family: $font-family;
-  font-size: 60px;
+  font-size: 40px;
+}
+
+.end {
+  .btn {
+    color: var(--color-black);
+    background-color: transparent;
+    text-decoration: none;
+  }
+}
+
+.link {
+  color: var(--color-black);
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  margin-top: 15px;
+  text-decoration: none;
+}
+
+.start_link {
+  color: var(--primary);
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 36px;
+  margin-bottom: 80px;
+  text-decoration: none;
+}
+
+.dark .end {
+  .btn {
+    margin-top: 10px;
+    color: var(--color-white);
+    background-color: transparent;
+    border: none;
+    text-decoration: none;
+  }
 }
