--- a/packages/client/src/pages/Game/game.scss
+++ b/packages/client/src/pages/Game/game.scss
@@ -1,6 +1,12 @@
-canvas { 
-    background: #eee; 
-    display: block; 
-    margin: 0 auto; 
-    margin-top: 100px;
+canvas {
+  background: var(--color-white);
+  display: block;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+
+.dark {
+  canvas {
+    background: var(--primary-dark);
+  }
 }
